# agent-readiness

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Makefile  PLAN.md  README.md  RUBRIC.md  SANDBOX.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  RUBRIC.md  SANDBOX.md
scripts/: check_dashboard_dist.py  vendor_rules.sh
src/agent_readiness/: __init__.py  __main__.py  apply_action.py  cli.py  config.py  context.py  coordination.py  dashboard_dist_check.py  enumerate.py  enumerate_git.py  gaps.py  mcp_server.py  models.py  onboarding.py  plugins.py  rules_pack_loader.py  rules_runtime.py  sandbox.py  scaffold.py  scorer.py  workspace_detect.py  workspace_scan.py
src/agent_readiness/_dashboard_dist/: 404.html  index.html
src/agent_readiness/_dashboard_dist/assets/: index-BGj1eyAv.js  index-BKiwTeaV.js  index-BWo2M1Nd.js  index-DmFSSss8.css  index-bzR6C7i9.js  index-n4bdcghj.js
src/agent_readiness/_dashboard_dist/data/: index.json
src/agent_readiness/checks/: __init__.py  agent_docs.py  branch_rulesets.py  churn.py  ci_check.py  devcontainer.py  entry_points.py  env_parity.py  git_history.py  gitignore.py  headless.py  hooks.py  lint_check.py  manifest.py  meta_consistency.py  naming.py  readme.py  repo_shape.py  repo_templates.py  secrets.py  security.py  setup_steps.py  test_command.py  typecheck.py
src/agent_readiness/live_scan/: __init__.py  api.py  discovery.py  envelope.py  eta.py  events.py  history.py  intents.py  onboarding_api.py  paths.py  pidfile.py  prompts.py  server.py  snapshot.py  sse.py  topaction_adapter.py  worker.py
src/agent_readiness/manifest/: __init__.py  loader.py  validator.py
src/agent_readiness/ontology/: __init__.py  identity.py  loader.py  query.py  ratify.py  status.py  validate.py
src/agent_readiness/ontology/bootstrap/: __init__.py  init.py  propose_actions_intents.py  propose_functions.py  propose_interfaces.py  propose_links.py  propose_objects.py
src/agent_readiness/ontology/drift/: __init__.py  detect.py  propose_pr.py
src/agent_readiness/ontology/reasoning/: __init__.py  engine.py
src/agent_readiness/ontology/runtime/: __init__.py  action.py  data.py  intent.py  logic.py
src/agent_readiness/render/: __init__.py  static.py
src/agent_readiness/renderers/: __init__.py  html_renderer.py  json_renderer.py  progress.py  sarif.py  terminal.py
src/agent_readiness/rules_eval/: __init__.py  applies_when.py  context_probe.py  evaluator.py  loader.py  matchers.py
src/agent_readiness/rules_eval/matchers/: __init__.py  _builtins.py  ontology_instance_count.py  ontology_interface_satisfaction.py  ontology_ref_closure.py
src/agent_readiness/rules_eval/private_matchers/: __init__.py  ast_complexity.py  cross_file_consistency.py  gaps_jsonl_unresolved.py  gh_cli_query.py  git_log_query.py  gitignore_coverage.py  manifest_introspection.py  naming_search.py  ontology_inference.py  (+5 more)
src/agent_readiness/rules_pack/: MANIFEST  __init__.py  manifest.toml
src/agent_readiness/templates/: AGENTS.md  CODEOWNERS  SECURITY.md  dependabot.yml  devcontainer.json  gitignore  issue_template_bug.md  issue_template_feature.md  pre-commit-config.yaml  pull_request_template.md
tests/: conftest.py  test_applies_when.py  test_apply_action.py  test_apply_action_confidence.py  test_batch3.py  test_cli_action.py  test_cli_bootstrap.py  test_cli_drift.py  test_cli_enumerate.py  test_cli_ontology.py  test_cli_ontology_reason.py  test_cli_render_report.py  test_cli_runtime.py  test_cli_scan_and_view.py  test_cli_scan_list.py  test_cli_scan_subcommands.py  test_cli_workspace_scan.py  test_coordination.py  test_dashboard_dist_check.py  test_enumerate.py  test_enumerate_git.py  test_gap_cli.py  test_integration_workspace_scan.py  test_live_scan_api.py  test_live_scan_detached_server.py  test_live_scan_discovery.py  test_live_scan_envelope.py  test_live_scan_eta.py  test_live_scan_events.py  test_live_scan_history.py  test_live_scan_intents.py  test_live_scan_paths.py  test_live_scan_pidfile.py  test_live_scan_prompts.py  test_live_scan_server.py  test_live_scan_snapshot.py  test_live_scan_sse.py  test_live_scan_worker.py  test_live_scan_worker_onboarding.py  test_matcher_parity.py  (+21 more)
tests/fixtures/bare/: README.md
tests/fixtures/dogfood_workspace/: build_dogfood.sh
tests/fixtures/good/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  Makefile  README.md  SECURITY.md
tests/fixtures/messy/: pyproject.toml
tests/manifest/: test_cli_manifest.py  test_loader.py  test_validator.py
tests/ontology/: test_identity.py  test_loader.py  test_query.py  test_ratify.py  test_status.py  test_validate.py
tests/ontology/bootstrap/: conftest.py  test_init.py  test_propose_actions_intents.py  test_propose_functions.py  test_propose_interfaces.py  test_propose_links.py  test_propose_objects.py
tests/ontology/drift/: conftest.py  test_detect.py  test_propose_pr.py  test_umbrella_self_drift.py  workspace.py
tests/ontology/reasoning/: conftest.py  test_engine.py  test_evaluators.py  test_smoke_umbrella.py
tests/ontology/runtime/: test_action.py  test_data.py  test_intent.py  test_logic.py
tests/rules_eval/: test_applies_when.py  test_loader.py
tests/rules_eval/matchers/: conftest.py  test_ontology_instance_count.py  test_ontology_interface_satisfaction.py  test_ontology_ref_closure.py  test_regex_in_files.py
tests/rules_eval/private_matchers/: test_gaps_jsonl_unresolved.py  test_ontology_inference.py
validate/: README.md
(+101 files in other folders)
