[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-readiness"
version = "0.1.0.dev0"
description = "Benchmark how agent-ready a code repository is for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-readiness contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "agents", "code-quality", "developer-experience", "benchmark"]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
report = ["jinja2>=3.1"]
complexity = ["lizard>=1.17"]
full = ["jinja2>=3.1", "lizard>=1.17"]

[project.scripts]
agent-readiness = "agent_readiness.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_readiness"]

[tool.ruff]
line-length = 100
target-version = "py311"
