[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-readiness"
version = "2.4.3"
description = "Benchmark how agent-ready a code repository is for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-readiness contributors" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ai", "agents", "code-quality", "developer-experience", "benchmark"]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6",
    # NOTE: pinned to >=0.1 (not >=0.4 which would be semantically
    # correct for the fix_prompt feature) because protocol 0.4.0 is
    # not on PyPI yet — only 0.1.0 is. The loader gracefully degrades
    # when an older protocol rejects newer rule fields (see
    # rules_eval/loader.py L94-111): the protocol's Rule validation is
    # best-effort and unknown match types still graceful-degrade to
    # not_measured. Tighten this pin once protocol >=0.4 is published.
    "agent-readiness-insights-protocol>=0.1,<1.0",
]

[project.urls]
Homepage = "https://github.com/harrydaihaolin/agent-readiness"
Repository = "https://github.com/harrydaihaolin/agent-readiness"
Changelog = "https://github.com/harrydaihaolin/agent-readiness/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/harrydaihaolin/agent-readiness/issues"
Documentation = "https://github.com/harrydaihaolin/agent-readiness#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "build",
]
report = ["jinja2>=3.1"]
complexity = ["lizard>=1.17"]
mcp = ["mcp>=1.0"]
full = ["jinja2>=3.1", "lizard>=1.17", "mcp>=1.0"]

[project.scripts]
agent-readiness = "agent_readiness.cli:cli"
agent-readiness-mcp = "agent_readiness.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_readiness"]
include = [
    "src/agent_readiness/rules_pack/**/*.yaml",
    "src/agent_readiness/rules_pack/MANIFEST",
    "src/agent_readiness/rules_pack/manifest.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
